--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,23 +6,25 @@
 
 :root {
   --white-background: #f8f8f8;
-  --white-details: #FEFEFE;
+  --white-details: #fefefe;
+
+  --dracula: #282a36;
 
   --shadow: #050206;
-  --black-text: #29292E;
+  --black-text: #29292e;
 
   --gray-dark: #737380;
-  --gray-medium: #A8A8B3;
-  --gray-light: #DBDCDD;
+  --gray-medium: #a8a8b3;
+  --gray-light: #dbdcdd;
 
-  --pink-dark: #E559F9;
-  --pink-light: #D67EE2;
+  --pink-dark: #e559f9;
+  --pink-light: #d67ee2;
 
-  --red: #E73F5D;
-  --red-hover: #D73754;
+  --red: #e73f5d;
+  --red-hover: #d73754;
 
-  --purple: #835AFD;
-  --purple-hover: #6F4BD8;
+  --purple: #835afd;
+  --purple-hover: #6f4bd8;
 }
 
 @media (max-width: 1080px) {
@@ -42,11 +44,20 @@ body {
   color: var(--black-text);
 }
 
-body, input, button, textarea {
-  font: 400 16px 'Roboto', sans-serif;
+body.dark-mode {
+  background: var(--dracula);
+  color: var(--white-background);
 }
 
-button {
+body,
+input,
+button,
+textarea {
+  font: 400 16px "Roboto", sans-serif;
+}
+
+button,
+img#logo {
   cursor: pointer;
 }
 
