--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,28 +1,34 @@
 .button {
-    height: 3.125rem;
-    border-radius: 8px;
-    font-weight: 500;
-    background-color: var(--purple);
-    color: var(--white-details);
-    padding: 0 2rem;
+  height: 3.125rem;
+  border-radius: 8px;
+  font-weight: 500;
+  background-color: var(--purple);
+  color: var(--white-details);
+  padding: 0 2rem;
 
-    display: flex;
-    justify-content: center;
-    align-items:center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    border: 0;
-    transition: filter 0.2s;
+  border: 0;
+  transition: filter 0.2s;
 
-    img {
-      margin-right: 0.5rem;
-    }
+  img {
+    margin-right: 0.5rem;
+  }
 
-    &:not(:disabled):hover {
-      filter: brightness(0.9)
-    }
+  &.outlined {
+    background-color: var(--white-details);
+    border: 1px solid var(--purple);
+    color: var(--purple);
+  }
 
-    &:disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
-    }
+  &:not(:disabled):hover {
+    filter: brightness(0.9);
+  }
+
+  &:disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+  }
 }
