--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,7 @@
 
   --dracula: #282a36;
 
-  --shadow: #050206;
+  --shadow: rgb(6, 3, 8, 0.8);
   --black-text: #29292e;
 
   --gray-dark: #737380;
@@ -21,10 +21,8 @@
   --pink-light: #d67ee2;
 
   --red: #e73f5d;
-  --red-hover: #d73754;
 
   --purple: #835afd;
-  --purple-hover: #6f4bd8;
 }
 
 *::-webkit-scrollbar-track {
