--- a/src/components/ModalRemove/styles.scss
+++ b/src/components/ModalRemove/styles.scss
@@ -5,6 +5,11 @@
 
   padding: 3rem 3.5rem;
 
+  @media (max-width: 700px) {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
   color: var(--black-text);
 
   > h2 {
@@ -23,6 +28,7 @@
 }
 
 .description {
+  text-align: center;
   color: var(--gray-dark);
 }
 
@@ -30,6 +36,12 @@
   display: flex;
   gap: 0.5rem;
   margin-top: 2.625rem;
+
+  @media (max-width: 700px) {
+    flex-direction: column;
+    width: 100%;
+    gap: 1rem;
+  }
 
   button#cancel {
     background-color: var(--gray-light);
