--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -32,12 +32,34 @@
           height: 2.5rem;
         }
       }
+
+      > div.adm {
+        @media (max-width: 700px) {
+          flex-direction: column;
+          width: 100%;
+          gap: 2rem;
+          
+          button {
+            width: 100%;
+            height: 3rem;
+          }
+        }
+
+        #participant {
+          color: var(--pink-dark);
+          text-decoration: underline;
+          margin: auto 0;
+        }
+      }
+
     }
   }
 
   main {
     max-width: 50rem;
     margin: 0 auto;
+    padding-bottom: 2rem;
+
 
     @media (max-width: 700px) {
       margin: 0 1rem;
