--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -1,6 +1,6 @@
 .button {
   height: 3.125rem;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   font-weight: 500;
   background-color: var(--purple);
   color: var(--white-details);
