--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -4,7 +4,7 @@
   height: 100vh;
 
   aside {
-    @media (max-width: 700px) {
+    @media (max-width: 43.75rem) {
       display: none;
     }
 
@@ -47,12 +47,7 @@
     justify-content: center;
   }
 
-  .toggleThemeContainer {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 4rem;
-  }
-
+  
   .main-content {
     display: flex;
     flex-direction: column;
@@ -60,17 +55,17 @@
     max-width: 20rem;
     align-items: stretch;
     text-align: center;
-
+    
     > img {
       align-self: center;
     }
-
+    
     h2 {
       font-size: 1.5rem;
       margin: 4rem 0 1.5rem;
       font-family: "Poppins", sans-serif;
     }
-
+    
     form {
       input {
         height: 3.125rem;
@@ -79,17 +74,17 @@
         background: var(--white-details);
         border: 1px solid var(--gray-medium);
       }
-
+      
       button {
         margin-top: 1rem;
       }
-
+      
       button,
       input {
         width: 100%;
       }
     }
-
+    
     p {
       font-size: 0.875rem;
       color: var(--gray-dark);
@@ -99,7 +94,7 @@
         color: var(--pink-dark);
       }
     }
-
+    
     .create-room {
       margin-top: 4rem;
       height: 3.125rem;
@@ -107,18 +102,18 @@
       font-weight: 500;
       background-color: #ea4335;
       color: var(--white-details);
-
+      
       display: flex;
       justify-content: center;
       align-items: center;
-
+      
       border: 0;
       transition: filter 0.2s;
-
+      
       img {
         margin-right: 0.5rem;
       }
-
+      
       &:hover {
         filter: brightness(0.9);
       }
@@ -127,11 +122,11 @@
     .separator {
       font-size: 0.875rem;
       color: var(--gray-medium);
-
+      
       margin: 2rem 0;
       display: flex;
       align-items: center;
-
+      
       &::before {
         content: "";
         flex: 1;
@@ -139,7 +134,7 @@
         background-color: var(--gray-medium);
         margin-right: 1rem;
       }
-
+      
       &::after {
         content: "";
         flex: 1;
